argo/apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    homepage.name: "prowlarr"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9696
      protocol: TCP
  selector:
    app.kubernetes.io/name: prowlarr
